# openllm-deploybench

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: HARDWARE_PROFILES.md  benchmark_matrix.example.yaml  benchmark_matrix.reproducible.yaml  benchmark_matrix.smoke.yaml  cloud_providers.example.yaml  hardware.cloud.h200.dual.example.yaml  hardware.cloud.h200.single.example.yaml  hardware.cloud.rtx4090.dual.example.yaml  hardware.cloud.rtx4090.single.example.yaml  hardware.cloud.rtx5090.dual.example.yaml  hardware.cloud.rtx5090.single.example.yaml  hardware.local.example.yaml  hardware.owned.h200.dual.example.yaml  hardware.owned.h200.single.example.yaml  hardware.owned.rtx4090.dual.example.yaml  hardware.owned.rtx4090.single.example.yaml  hardware.owned.rtx5090.dual.example.yaml  hardware.owned.rtx5090.single.example.yaml  models.example.yaml
scripts/: _bootstrap.py  check_environment.sh  download_models.py  env.cuda.sh.example  fix_nvml.sh  install_ubuntu.sh  lib_common.sh  plot_results.py  run_all.py  run_hardware_probe.py  run_long_context_benchmark.py  run_quantization_benchmark.py  run_serving_benchmark.py  setup_cuda_env.sh  summarize_results.py
src/deploybench/: __init__.py  __main__.py  analysis.py  benchmark_runner.py  cli.py  config.py  gpu_monitor.py  hardware_probe.py  long_context.py  metrics.py  nvml_helper.py  plotting.py  quantization.py  result_schema.py  utils.py  vllm_runner.py  workload_generator.py
workloads/prompts/: chat_prompts.jsonl  coding_prompts.jsonl  rag_prompts.jsonl  turkish_prompts.jsonl
(+1 files in other folders)
